--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Password Generator</title>
 </head>
 <body style="text-align: center;">
-    <h2>Ecco la password generata</h2>
+    <h2>Genera la tua password</h2>
+    <label for="nome">Inserisci il tuo nome:</label>
+    <input type="text" name="nome" id="nome">
+    <br>
+    <label for="cognome">Inserisci il tuo cognome:</label>
+    <input type="text" name="cognome" id="cognome">
+    <br>
+    <label for="colore">Inserisci il tuo colore preferito:</label>
+    <input type="text" name="colore" id="colore">
+    <br>
+    <button onclick="creaPassword()">Genera password</button>
+
+    <h2>Ecco la tua password generata:</h2>
+    <h1 id="password"></h1>
+
 
     <script src="./main.js"></script>
     
